# continuous_deployment_starter

./: .actrc  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  TROUBLESHOOTING.md  docker-compose.yml  test-hook.txt  test-yaml.yml
.claude/: settings.json
.github/environments/: README.md
.github/workflows/: build-artifacts.yml  build-release-tool.yml  build.yml  e2e-tests.yml  live-release.yml  production-deployment.yml  release.yml  security-scan.yml  staging-release.yml  test-minimal.yml
applications/airflow_dags/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint_dev.sh  example.env  pyproject.toml  pytest.ini  quick_test.sh  requirements-dev.txt  requirements.txt  setup.py  test_docker.sh  validate_dags.sh
applications/airflow_dags/dags/: __init__.py  shopify_analytics.py  shopify_common.py  shopify_customer_data_dag.py  shopify_data_pipeline.py  shopify_get_past_purchases_dag.py  shopify_get_store_metadata_dag.py  shopify_order_data_dag.py  shopify_past_purchases.py  shopify_store_metadata.py  shopify_sync.py
applications/airflow_dags/entrypoints/: entrypoint.sh  entrypoint_e2e.sh  entrypoint_test.sh
applications/airflow_dags/src/: __init__.py
applications/airflow_dags/src/dags/: __init__.py  shopify_customer_data_dag.py  shopify_data_pipeline.py  shopify_order_data_dag.py  shopify_past_purchases.py  shopify_store_metadata.py
applications/airflow_dags/src/hooks/: shopify_hook.py
applications/airflow_dags/src/operators/: shopify_operator.py
applications/airflow_dags/src/plugins/: __init__.py
applications/airflow_dags/src/queries/: getAllProductData.gql  getCustomersWithOrders.gql  getProductImages.gql  getProductImagesById.gql
applications/airflow_dags/src/utils/: __init__.py  config.py  database.py  query_loader.py  shopify_client.py  shopify_graphql.py
applications/airflow_dags/tests/: README.md  __init__.py  conftest.py  test_dag_functions.py  test_dag_integrity.py  test_dags.py  test_data_processing.py  test_payload_validation.py  test_shopify_common.py  test_shopify_get_past_purchases_dag.py  test_shopify_get_store_metadata_dag.py  test_shopify_hook.py  test_shopify_integration.py  test_utils.py
applications/airflow_dags/tests/fixtures/shopify_responses/: customers_with_orders_response.json  product_images_response.json  products_response.json
applications/app.pxy6.com/: Dockerfile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yaml  example.env  package-lock.json  package.json
applications/app_1/: Dockerfile  docker-compose.yaml  entrypoint.sh  entrypoint_api.sh  example.env  requirements.txt  skipped-Dockerfile
applications/app_2/: Dockerfile  requirements.txt
applications/pxy6.com/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yaml  package-lock.json  package.json  skipped-Dockerfile  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  LOCAL_TESTING.md  RELEASE_PROCESS.md  SECURITY.md  TROUBLESHOOTING.md
global_services/registry/: docker-compose.yml
libraries/shared_lib/: setup.py
release-tooling/deployment-manager/: Dockerfile  pyproject.toml
release-tooling/deployment-manager/entrypoints/: entrypoint_e2e.sh  entrypoint_test.sh
release-tooling/deployment-manager/src/release_tool/: changed_services.py  main.py
release-tooling/deployment-manager/src/tests/: test_image_manager.py
release-tooling/pytool/: Dockerfile  README.md  pyproject.toml  pytest.ini
release-tooling/scripts/: check-service-envs.sh  create_env_variables.sh  deploy_on_host.sh  generate-env-from-gh-variables.sh
release-tooling/tests_e2e_orchestrator/: test_deploy_orchestrator.py
services/: example.version.env  version.env
services/01_postgres/: docker-compose.yml  users.csv
services/02_app_1/: docker-compose.yml  (+1 more)
utilities/: test-docker-builds.sh
(+297 files in other folders)
